@@ -14,10 +14,6 @@ Design
   - Check for root in lib?
   - will require protocol headers to be hidden?
   - password or something for userspace metrics?
-- Way for metric modules to tell Cerebrod it has new data and it should
-  be sent out??
-  - pass a function to the thread to be called with a metric_name.
-  - will tell cerebrod this thing has been updated.
 - Update time for each cerebro metric data?
 - nodelist
   - use own list instead of 'List' to store iterators?
